// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`symbol-instance-middleware sets style for symbolInstance when middleware function is defined in separate config file 1`] = `
Object {
  "document.asketch.json": Object {
    "_class": "document",
    "assets": Object {
      "_class": "assetCollection",
      "colors": Array [],
    },
    "currentPageIndex": 0,
    "do_objectID": "__GUID__",
    "enableLayerInteraction": true,
    "enableSliceInteraction": true,
    "foreignSymbols": Array [],
    "layerStyles": Object {
      "_class": "sharedStyleContainer",
      "objects": Array [],
    },
    "layerSymbols": Object {
      "_class": "symbolContainer",
      "objects": Array [],
    },
    "layerTextStyles": Object {
      "_class": "sharedTextStyleContainer",
      "objects": Array [],
    },
    "pages": Array [],
  },
  "document.page.json": Object {
    "_class": "page",
    "clippingMaskMode": 0,
    "do_objectID": "__GUID__",
    "exportOptions": Object {
      "_class": "exportOptions",
      "exportFormats": Array [],
      "includedLayerIds": Array [],
      "layerOptions": 0,
      "shouldTrim": false,
    },
    "frame": Object {
      "_class": "rect",
      "constrainProportions": false,
      "height": 108,
      "width": 784,
      "x": 0,
      "y": 0,
    },
    "hasClickThrough": true,
    "hasClippingMask": false,
    "horizontalRulerData": Object {
      "_class": "rulerData",
      "base": 0,
      "guides": Array [],
    },
    "includeInCloudUpload": true,
    "isFlippedHorizontal": false,
    "isFlippedVertical": false,
    "isLocked": false,
    "isVisible": true,
    "layerListExpandedType": 0,
    "layers": Array [
      Object {
        "_class": "symbolMaster",
        "backgroundColor": Object {
          "_class": "color",
          "alpha": 1,
          "blue": 1,
          "green": 1,
          "red": 1,
        },
        "changeIdentifier": 0,
        "clippingMaskMode": 0,
        "do_objectID": "__GUID__",
        "exportOptions": Object {
          "_class": "exportOptions",
          "exportFormats": Array [],
          "includedLayerIds": Array [],
          "layerOptions": 0,
          "shouldTrim": false,
        },
        "frame": Object {
          "_class": "rect",
          "constrainProportions": false,
          "height": 17,
          "width": 38.21875,
          "x": 8,
          "y": 8,
        },
        "groupLayout": Object {
          "_class": "MSImmutableFreeformGroupLayout",
        },
        "hasBackgroundColor": false,
        "hasClickThrough": true,
        "hasClippingMask": false,
        "horizontalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
        "includeBackgroundColorInExport": true,
        "includeBackgroundColorInInstance": false,
        "includeInCloudUpload": true,
        "isFlippedHorizontal": false,
        "isFlippedVertical": false,
        "isLocked": false,
        "isVisible": true,
        "layerListExpandedType": 0,
        "layers": Array [
          Object {
            "_class": "text",
            "automaticallyDrawOnUnderlyingPath": false,
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "dontSynchroniseWithSymbol": false,
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 17,
              "width": 38.21875,
              "x": 0,
              "y": 0,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "lineSpacingBehaviour": 2,
            "name": "Reply",
            "nameIsFixed": false,
            "resizingConstraint": 47,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "color": "rgb(0, 0, 0)",
              "fontFamily": "Times New Roman",
              "fontSize": 16,
              "fontWeight": 400,
              "textAlign": "start",
              "textDecoration": "none",
              "textTransform": "none",
            },
            "text": "Reply",
            "textBehaviour": 0,
          },
        ],
        "name": "Icon/Reply",
        "nameIsFixed": false,
        "resizesContent": false,
        "resizingConstraint": 63,
        "resizingType": 0,
        "rotation": 0,
        "shouldBreakMaskChain": false,
        "style": Object {
          "_class": "style",
          "endDecorationType": 0,
          "miterLimit": 10,
          "startDecorationType": 0,
        },
        "symbolID": "__GUID__",
        "verticalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
      },
      Object {
        "_class": "symbolMaster",
        "backgroundColor": Object {
          "_class": "color",
          "alpha": 1,
          "blue": 1,
          "green": 1,
          "red": 1,
        },
        "changeIdentifier": 0,
        "clippingMaskMode": 0,
        "do_objectID": "__GUID__",
        "exportOptions": Object {
          "_class": "exportOptions",
          "exportFormats": Array [],
          "includedLayerIds": Array [],
          "layerOptions": 0,
          "shouldTrim": false,
        },
        "frame": Object {
          "_class": "rect",
          "constrainProportions": false,
          "height": 17,
          "width": 52.421875,
          "x": 8,
          "y": 26,
        },
        "groupLayout": Object {
          "_class": "MSImmutableFreeformGroupLayout",
        },
        "hasBackgroundColor": false,
        "hasClickThrough": true,
        "hasClippingMask": false,
        "horizontalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
        "includeBackgroundColorInExport": true,
        "includeBackgroundColorInInstance": false,
        "includeInCloudUpload": true,
        "isFlippedHorizontal": false,
        "isFlippedVertical": false,
        "isLocked": false,
        "isVisible": true,
        "layerListExpandedType": 0,
        "layers": Array [
          Object {
            "_class": "text",
            "automaticallyDrawOnUnderlyingPath": false,
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "dontSynchroniseWithSymbol": false,
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 17,
              "width": 52.421875,
              "x": 0,
              "y": 0,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "lineSpacingBehaviour": 2,
            "name": "Retweet",
            "nameIsFixed": false,
            "resizingConstraint": 47,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "color": "rgb(0, 0, 0)",
              "fontFamily": "Times New Roman",
              "fontSize": 16,
              "fontWeight": 400,
              "textAlign": "start",
              "textDecoration": "none",
              "textTransform": "none",
            },
            "text": "Retweet",
            "textBehaviour": 0,
          },
        ],
        "name": "Icon/Retweet",
        "nameIsFixed": false,
        "resizesContent": false,
        "resizingConstraint": 63,
        "resizingType": 0,
        "rotation": 0,
        "shouldBreakMaskChain": false,
        "style": Object {
          "_class": "style",
          "endDecorationType": 0,
          "miterLimit": 10,
          "startDecorationType": 0,
        },
        "symbolID": "__GUID__",
        "verticalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
      },
      Object {
        "_class": "symbolMaster",
        "backgroundColor": Object {
          "_class": "color",
          "alpha": 1,
          "blue": 1,
          "green": 1,
          "red": 1,
        },
        "changeIdentifier": 0,
        "clippingMaskMode": 0,
        "do_objectID": "__GUID__",
        "exportOptions": Object {
          "_class": "exportOptions",
          "exportFormats": Array [],
          "includedLayerIds": Array [],
          "layerOptions": 0,
          "shouldTrim": false,
        },
        "frame": Object {
          "_class": "rect",
          "constrainProportions": false,
          "height": 17,
          "width": 29.328125,
          "x": 8,
          "y": 44,
        },
        "groupLayout": Object {
          "_class": "MSImmutableFreeformGroupLayout",
        },
        "hasBackgroundColor": false,
        "hasClickThrough": true,
        "hasClippingMask": false,
        "horizontalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
        "includeBackgroundColorInExport": true,
        "includeBackgroundColorInInstance": false,
        "includeInCloudUpload": true,
        "isFlippedHorizontal": false,
        "isFlippedVertical": false,
        "isLocked": false,
        "isVisible": true,
        "layerListExpandedType": 0,
        "layers": Array [
          Object {
            "_class": "text",
            "automaticallyDrawOnUnderlyingPath": false,
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "dontSynchroniseWithSymbol": false,
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 17,
              "width": 29.328125,
              "x": 0,
              "y": 0,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "lineSpacingBehaviour": 2,
            "name": "Like",
            "nameIsFixed": false,
            "resizingConstraint": 47,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "color": "rgb(0, 0, 0)",
              "fontFamily": "Times New Roman",
              "fontSize": 16,
              "fontWeight": 400,
              "textAlign": "start",
              "textDecoration": "none",
              "textTransform": "none",
            },
            "text": "Like",
            "textBehaviour": 0,
          },
        ],
        "name": "Icon/Like",
        "nameIsFixed": false,
        "resizesContent": false,
        "resizingConstraint": 63,
        "resizingType": 0,
        "rotation": 0,
        "shouldBreakMaskChain": false,
        "style": Object {
          "_class": "style",
          "endDecorationType": 0,
          "miterLimit": 10,
          "startDecorationType": 0,
        },
        "symbolID": "__GUID__",
        "verticalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
      },
      Object {
        "_class": "symbolMaster",
        "backgroundColor": Object {
          "_class": "color",
          "alpha": 1,
          "blue": 1,
          "green": 1,
          "red": 1,
        },
        "changeIdentifier": 0,
        "clippingMaskMode": 0,
        "do_objectID": "__GUID__",
        "exportOptions": Object {
          "_class": "exportOptions",
          "exportFormats": Array [],
          "includedLayerIds": Array [],
          "layerOptions": 0,
          "shouldTrim": false,
        },
        "frame": Object {
          "_class": "rect",
          "constrainProportions": false,
          "height": 54,
          "width": 1008,
          "x": 8,
          "y": 62,
        },
        "groupLayout": Object {
          "_class": "MSImmutableFreeformGroupLayout",
        },
        "hasBackgroundColor": false,
        "hasClickThrough": true,
        "hasClippingMask": false,
        "horizontalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
        "includeBackgroundColorInExport": true,
        "includeBackgroundColorInInstance": false,
        "includeInCloudUpload": true,
        "isFlippedHorizontal": false,
        "isFlippedVertical": false,
        "isLocked": false,
        "isVisible": true,
        "layerListExpandedType": 0,
        "layers": Array [
          Object {
            "_class": "symbolInstance",
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 18,
              "width": 1008,
              "x": 0,
              "y": 0,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "layers": Array [],
            "name": "from-config-file-Icon/Reply",
            "nameIsFixed": false,
            "resizingConstraint": 27,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "_class": "style",
              "endDecorationType": 0,
              "miterLimit": 10,
              "startDecorationType": 0,
            },
            "symbolID": "__GUID__",
          },
          Object {
            "_class": "symbolInstance",
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 18,
              "width": 1008,
              "x": 0,
              "y": 18,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "layers": Array [],
            "name": "from-config-file-Icon/Retweet",
            "nameIsFixed": false,
            "resizingConstraint": 27,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "_class": "style",
              "endDecorationType": 0,
              "miterLimit": 10,
              "startDecorationType": 0,
            },
            "symbolID": "__GUID__",
          },
          Object {
            "_class": "symbolInstance",
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 18,
              "width": 1008,
              "x": 0,
              "y": 36,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "layers": Array [],
            "name": "from-config-file-Icon/Like",
            "nameIsFixed": false,
            "resizingConstraint": 27,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "_class": "style",
              "endDecorationType": 0,
              "miterLimit": 10,
              "startDecorationType": 0,
            },
            "symbolID": "__GUID__",
          },
        ],
        "name": "IconRow",
        "nameIsFixed": false,
        "resizesContent": false,
        "resizingConstraint": 63,
        "resizingType": 0,
        "rotation": 0,
        "shouldBreakMaskChain": false,
        "style": Object {
          "_class": "style",
          "endDecorationType": 0,
          "miterLimit": 10,
          "startDecorationType": 0,
        },
        "symbolID": "__GUID__",
        "verticalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
      },
    ],
    "name": "html-sketchapp symbols",
    "nameIsFixed": false,
    "resizingConstraint": 63,
    "resizingType": 0,
    "rotation": 0,
    "shouldBreakMaskChain": false,
    "style": Object {
      "_class": "style",
      "endDecorationType": 0,
      "miterLimit": 10,
      "startDecorationType": 0,
    },
    "verticalRulerData": Object {
      "_class": "rulerData",
      "base": 0,
      "guides": Array [],
    },
  },
}
`;

exports[`symbol-instance-middleware sets style for symbolInstance when middleware function is defined inline in config file 1`] = `
Object {
  "document.asketch.json": Object {
    "_class": "document",
    "assets": Object {
      "_class": "assetCollection",
      "colors": Array [],
    },
    "currentPageIndex": 0,
    "do_objectID": "__GUID__",
    "enableLayerInteraction": true,
    "enableSliceInteraction": true,
    "foreignSymbols": Array [],
    "layerStyles": Object {
      "_class": "sharedStyleContainer",
      "objects": Array [],
    },
    "layerSymbols": Object {
      "_class": "symbolContainer",
      "objects": Array [],
    },
    "layerTextStyles": Object {
      "_class": "sharedTextStyleContainer",
      "objects": Array [],
    },
    "pages": Array [],
  },
  "document.page.json": Object {
    "_class": "page",
    "clippingMaskMode": 0,
    "do_objectID": "__GUID__",
    "exportOptions": Object {
      "_class": "exportOptions",
      "exportFormats": Array [],
      "includedLayerIds": Array [],
      "layerOptions": 0,
      "shouldTrim": false,
    },
    "frame": Object {
      "_class": "rect",
      "constrainProportions": false,
      "height": 108,
      "width": 784,
      "x": 0,
      "y": 0,
    },
    "hasClickThrough": true,
    "hasClippingMask": false,
    "horizontalRulerData": Object {
      "_class": "rulerData",
      "base": 0,
      "guides": Array [],
    },
    "includeInCloudUpload": true,
    "isFlippedHorizontal": false,
    "isFlippedVertical": false,
    "isLocked": false,
    "isVisible": true,
    "layerListExpandedType": 0,
    "layers": Array [
      Object {
        "_class": "symbolMaster",
        "backgroundColor": Object {
          "_class": "color",
          "alpha": 1,
          "blue": 1,
          "green": 1,
          "red": 1,
        },
        "changeIdentifier": 0,
        "clippingMaskMode": 0,
        "do_objectID": "__GUID__",
        "exportOptions": Object {
          "_class": "exportOptions",
          "exportFormats": Array [],
          "includedLayerIds": Array [],
          "layerOptions": 0,
          "shouldTrim": false,
        },
        "frame": Object {
          "_class": "rect",
          "constrainProportions": false,
          "height": 17,
          "width": 38.21875,
          "x": 8,
          "y": 8,
        },
        "groupLayout": Object {
          "_class": "MSImmutableFreeformGroupLayout",
        },
        "hasBackgroundColor": false,
        "hasClickThrough": true,
        "hasClippingMask": false,
        "horizontalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
        "includeBackgroundColorInExport": true,
        "includeBackgroundColorInInstance": false,
        "includeInCloudUpload": true,
        "isFlippedHorizontal": false,
        "isFlippedVertical": false,
        "isLocked": false,
        "isVisible": true,
        "layerListExpandedType": 0,
        "layers": Array [
          Object {
            "_class": "text",
            "automaticallyDrawOnUnderlyingPath": false,
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "dontSynchroniseWithSymbol": false,
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 17,
              "width": 38.21875,
              "x": 0,
              "y": 0,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "lineSpacingBehaviour": 2,
            "name": "Reply",
            "nameIsFixed": false,
            "resizingConstraint": 47,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "color": "rgb(0, 0, 0)",
              "fontFamily": "Times New Roman",
              "fontSize": 16,
              "fontWeight": 400,
              "textAlign": "start",
              "textDecoration": "none",
              "textTransform": "none",
            },
            "text": "Reply",
            "textBehaviour": 0,
          },
        ],
        "name": "Icon/Reply",
        "nameIsFixed": false,
        "resizesContent": false,
        "resizingConstraint": 63,
        "resizingType": 0,
        "rotation": 0,
        "shouldBreakMaskChain": false,
        "style": Object {
          "_class": "style",
          "endDecorationType": 0,
          "miterLimit": 10,
          "startDecorationType": 0,
        },
        "symbolID": "__GUID__",
        "verticalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
      },
      Object {
        "_class": "symbolMaster",
        "backgroundColor": Object {
          "_class": "color",
          "alpha": 1,
          "blue": 1,
          "green": 1,
          "red": 1,
        },
        "changeIdentifier": 0,
        "clippingMaskMode": 0,
        "do_objectID": "__GUID__",
        "exportOptions": Object {
          "_class": "exportOptions",
          "exportFormats": Array [],
          "includedLayerIds": Array [],
          "layerOptions": 0,
          "shouldTrim": false,
        },
        "frame": Object {
          "_class": "rect",
          "constrainProportions": false,
          "height": 17,
          "width": 52.421875,
          "x": 8,
          "y": 26,
        },
        "groupLayout": Object {
          "_class": "MSImmutableFreeformGroupLayout",
        },
        "hasBackgroundColor": false,
        "hasClickThrough": true,
        "hasClippingMask": false,
        "horizontalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
        "includeBackgroundColorInExport": true,
        "includeBackgroundColorInInstance": false,
        "includeInCloudUpload": true,
        "isFlippedHorizontal": false,
        "isFlippedVertical": false,
        "isLocked": false,
        "isVisible": true,
        "layerListExpandedType": 0,
        "layers": Array [
          Object {
            "_class": "text",
            "automaticallyDrawOnUnderlyingPath": false,
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "dontSynchroniseWithSymbol": false,
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 17,
              "width": 52.421875,
              "x": 0,
              "y": 0,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "lineSpacingBehaviour": 2,
            "name": "Retweet",
            "nameIsFixed": false,
            "resizingConstraint": 47,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "color": "rgb(0, 0, 0)",
              "fontFamily": "Times New Roman",
              "fontSize": 16,
              "fontWeight": 400,
              "textAlign": "start",
              "textDecoration": "none",
              "textTransform": "none",
            },
            "text": "Retweet",
            "textBehaviour": 0,
          },
        ],
        "name": "Icon/Retweet",
        "nameIsFixed": false,
        "resizesContent": false,
        "resizingConstraint": 63,
        "resizingType": 0,
        "rotation": 0,
        "shouldBreakMaskChain": false,
        "style": Object {
          "_class": "style",
          "endDecorationType": 0,
          "miterLimit": 10,
          "startDecorationType": 0,
        },
        "symbolID": "__GUID__",
        "verticalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
      },
      Object {
        "_class": "symbolMaster",
        "backgroundColor": Object {
          "_class": "color",
          "alpha": 1,
          "blue": 1,
          "green": 1,
          "red": 1,
        },
        "changeIdentifier": 0,
        "clippingMaskMode": 0,
        "do_objectID": "__GUID__",
        "exportOptions": Object {
          "_class": "exportOptions",
          "exportFormats": Array [],
          "includedLayerIds": Array [],
          "layerOptions": 0,
          "shouldTrim": false,
        },
        "frame": Object {
          "_class": "rect",
          "constrainProportions": false,
          "height": 17,
          "width": 29.328125,
          "x": 8,
          "y": 44,
        },
        "groupLayout": Object {
          "_class": "MSImmutableFreeformGroupLayout",
        },
        "hasBackgroundColor": false,
        "hasClickThrough": true,
        "hasClippingMask": false,
        "horizontalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
        "includeBackgroundColorInExport": true,
        "includeBackgroundColorInInstance": false,
        "includeInCloudUpload": true,
        "isFlippedHorizontal": false,
        "isFlippedVertical": false,
        "isLocked": false,
        "isVisible": true,
        "layerListExpandedType": 0,
        "layers": Array [
          Object {
            "_class": "text",
            "automaticallyDrawOnUnderlyingPath": false,
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "dontSynchroniseWithSymbol": false,
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 17,
              "width": 29.328125,
              "x": 0,
              "y": 0,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "lineSpacingBehaviour": 2,
            "name": "Like",
            "nameIsFixed": false,
            "resizingConstraint": 47,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "color": "rgb(0, 0, 0)",
              "fontFamily": "Times New Roman",
              "fontSize": 16,
              "fontWeight": 400,
              "textAlign": "start",
              "textDecoration": "none",
              "textTransform": "none",
            },
            "text": "Like",
            "textBehaviour": 0,
          },
        ],
        "name": "Icon/Like",
        "nameIsFixed": false,
        "resizesContent": false,
        "resizingConstraint": 63,
        "resizingType": 0,
        "rotation": 0,
        "shouldBreakMaskChain": false,
        "style": Object {
          "_class": "style",
          "endDecorationType": 0,
          "miterLimit": 10,
          "startDecorationType": 0,
        },
        "symbolID": "__GUID__",
        "verticalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
      },
      Object {
        "_class": "symbolMaster",
        "backgroundColor": Object {
          "_class": "color",
          "alpha": 1,
          "blue": 1,
          "green": 1,
          "red": 1,
        },
        "changeIdentifier": 0,
        "clippingMaskMode": 0,
        "do_objectID": "__GUID__",
        "exportOptions": Object {
          "_class": "exportOptions",
          "exportFormats": Array [],
          "includedLayerIds": Array [],
          "layerOptions": 0,
          "shouldTrim": false,
        },
        "frame": Object {
          "_class": "rect",
          "constrainProportions": false,
          "height": 54,
          "width": 1008,
          "x": 8,
          "y": 62,
        },
        "groupLayout": Object {
          "_class": "MSImmutableFreeformGroupLayout",
        },
        "hasBackgroundColor": false,
        "hasClickThrough": true,
        "hasClippingMask": false,
        "horizontalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
        "includeBackgroundColorInExport": true,
        "includeBackgroundColorInInstance": false,
        "includeInCloudUpload": true,
        "isFlippedHorizontal": false,
        "isFlippedVertical": false,
        "isLocked": false,
        "isVisible": true,
        "layerListExpandedType": 0,
        "layers": Array [
          Object {
            "_class": "symbolInstance",
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 18,
              "width": 1008,
              "x": 0,
              "y": 0,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "layers": Array [],
            "name": "from-inline-function-Icon/Reply",
            "nameIsFixed": false,
            "resizingConstraint": 27,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "_class": "style",
              "endDecorationType": 0,
              "miterLimit": 10,
              "startDecorationType": 0,
            },
            "symbolID": "__GUID__",
          },
          Object {
            "_class": "symbolInstance",
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 18,
              "width": 1008,
              "x": 0,
              "y": 18,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "layers": Array [],
            "name": "from-inline-function-Icon/Retweet",
            "nameIsFixed": false,
            "resizingConstraint": 27,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "_class": "style",
              "endDecorationType": 0,
              "miterLimit": 10,
              "startDecorationType": 0,
            },
            "symbolID": "__GUID__",
          },
          Object {
            "_class": "symbolInstance",
            "clippingMaskMode": 0,
            "do_objectID": "__GUID__",
            "exportOptions": Object {
              "_class": "exportOptions",
              "exportFormats": Array [],
              "includedLayerIds": Array [],
              "layerOptions": 0,
              "shouldTrim": false,
            },
            "frame": Object {
              "_class": "rect",
              "constrainProportions": false,
              "height": 18,
              "width": 1008,
              "x": 0,
              "y": 36,
            },
            "hasClippingMask": false,
            "isFlippedHorizontal": false,
            "isFlippedVertical": false,
            "isLocked": false,
            "isVisible": true,
            "layerListExpandedType": 0,
            "layers": Array [],
            "name": "from-inline-function-Icon/Like",
            "nameIsFixed": false,
            "resizingConstraint": 27,
            "resizingType": 0,
            "rotation": 0,
            "shouldBreakMaskChain": false,
            "style": Object {
              "_class": "style",
              "endDecorationType": 0,
              "miterLimit": 10,
              "startDecorationType": 0,
            },
            "symbolID": "__GUID__",
          },
        ],
        "name": "IconRow",
        "nameIsFixed": false,
        "resizesContent": false,
        "resizingConstraint": 63,
        "resizingType": 0,
        "rotation": 0,
        "shouldBreakMaskChain": false,
        "style": Object {
          "_class": "style",
          "endDecorationType": 0,
          "miterLimit": 10,
          "startDecorationType": 0,
        },
        "symbolID": "__GUID__",
        "verticalRulerData": Object {
          "_class": "rulerData",
          "base": 0,
          "guides": Array [],
        },
      },
    ],
    "name": "html-sketchapp symbols",
    "nameIsFixed": false,
    "resizingConstraint": 63,
    "resizingType": 0,
    "rotation": 0,
    "shouldBreakMaskChain": false,
    "style": Object {
      "_class": "style",
      "endDecorationType": 0,
      "miterLimit": 10,
      "startDecorationType": 0,
    },
    "verticalRulerData": Object {
      "_class": "rulerData",
      "base": 0,
      "guides": Array [],
    },
  },
}
`;
